[project]
name = "chrome-ai-region-patch"
version = "0.1.0"
description = "Patch Chrome's local region eligibility fields for built-in AI features."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "chrome-ai-region-patch contributors" }]
keywords = ["chrome", "gemini", "glic", "local-state", "macos"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]

[project.scripts]
chrome-ai-region-patch = "chrome_ai_region_patch:main"
